fix broken style

--- a/client/applets/window.css
+++ b/client/applets/window.css
@@ -4,7 +4,6 @@
   height: 300px;
   background: rgb(24, 23, 23);
   padding-left: 10px;
-  parring-top: 10px;
   margin-bottom: 10px;
   color: greenyellow;
   border: 1px solid;
